style & whitespace fix

--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,22 @@ form {
   justify-content: center;
   align-items: center;
 }
+
 form input,
 form button {
   padding: 0.5rem;
   font-size: 2rem;
   border: none;
   background: white;
+}
+form input {
+  width: 100%;
+}
+.input-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 50px;
 }
 form button {
   color: #ff6f47;
@@ -63,6 +73,7 @@ form button:hover {
 }
 .todo li {
   flex: 1;
+  
 }
 
 .trash-btn,
@@ -79,6 +90,7 @@ form button:hover {
 }
 .todo-item {
   padding: 0rem 0.5rem;
+ 
 }
 
 .fa-trash,
@@ -137,3 +149,13 @@ select {
   transform: scale(1.5);
 }
 */
+
+@media only screen and (max-width: 600px) {
+  form {
+    flex-direction: column;
+  }
+  .todo-container{
+    display: block;
+    padding: 0 20px;
+  }
+}
